--- a/api/src/Components/LoginWithEmail.razor
+++ b/api/src/Components/LoginWithEmail.razor
@@ -10,17 +10,21 @@
 </head>
 
 <body>
-  <form onsubmit="login(); return false;">
+  <form onsubmit="login(event);">
     <input type="email" name="email" id="email" placeholder="Enter meail"><br><br>
     <input type="password" name="password" id="password" placeholder="Enter password"><br><br>
     <button type="submit">Login</button>
     <button type="button" onclick="refreshTokens()">Refresh</button>
   </form>
   <script>
-
     let accessToken = "";
-    async function login()
+    let refreshToken = "";
+    let sessionId = "";
+
+    async function login(event)
     {
+      event.preventDefault();
+
       const body = {
         email: document.querySelector('#email').value,
         password: document.querySelector('#password').value,
@@ -28,16 +32,19 @@
 
       try
       {
-        let response = await fetch("/login/web", {
-          body: JSON.stringify(body),
+        let response = await fetch("/auth/login", {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
-          }
+          },
+          body: JSON.stringify(body)
         });
 
         let json = await response.json();
+
         accessToken = json.accessToken;
+        refreshToken = json.refreshToken;
+        sessionId = json.sessionId;
       }
       catch (ex)
       {
@@ -49,14 +56,19 @@
     {
       try
       {
-        let response = await fetch("/refresh-tokens/web", {
+        let response = await fetch("/auth/refresh-tokens", {
           method: 'POST',
           headers: {
-            'Authorization': `Bearer ${accessToken}`
-          }
+            'Authorization': `Bearer ${accessToken}`,
+            'Content-Type': 'application/json'
+          },
+          body: JSON.stringify({ refreshToken, sessionId })
         });
 
-        console.log(response.status);
+        let json = await response.json();
+
+        accessToken = json.accessToken;
+        refreshToken = json.refreshToken;
       }
       catch (ex)
       {
