--- a/api/src/_Pages/Auth/LoginWithEmailWeb.razor
+++ b/api/src/_Pages/Auth/LoginWithEmailWeb.razor
@@ -1,4 +1,4 @@
-@namespace Kratos.Api.Components
+@namespace Kratos.Api._Pages.Auth
 
 <!DOCTYPE html>
 <html lang="en">
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <form onsubmit="login(event);">
+  <form onsubmit="login(); return false;">
     <input type="email" name="email" id="email" placeholder="Enter meail"><br><br>
     <input type="password" name="password" id="password" placeholder="Enter password"><br><br>
     <button type="submit">Login</button>
@@ -18,13 +18,9 @@
   </form>
   <script>
     let accessToken = "";
-    let refreshToken = "";
-    let sessionId = "";
 
-    async function login(event)
+    async function login()
     {
-      event.preventDefault();
-
       const body = {
         email: document.querySelector('#email').value,
         password: document.querySelector('#password').value,
@@ -32,7 +28,7 @@
 
       try
       {
-        let response = await fetch("/auth/login", {
+        let response = await fetch("/auth/login/web", {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json'
@@ -41,10 +37,7 @@
         });
 
         let json = await response.json();
-
         accessToken = json.accessToken;
-        refreshToken = json.refreshToken;
-        sessionId = json.sessionId;
       }
       catch (ex)
       {
@@ -56,19 +49,14 @@
     {
       try
       {
-        let response = await fetch("/auth/refresh-tokens", {
+        let response = await fetch("/auth/refresh-tokens/web", {
           method: 'POST',
           headers: {
-            'Authorization': `Bearer ${accessToken}`,
-            'Content-Type': 'application/json'
-          },
-          body: JSON.stringify({ refreshToken, sessionId })
+            'Authorization': `Bearer ${accessToken}`
+          }
         });
 
-        let json = await response.json();
-
-        accessToken = json.accessToken;
-        refreshToken = json.refreshToken;
+        console.log(response.status);
       }
       catch (ex)
       {
