Fix razor compnent urls

--- a/api/src/_Pages/_App.razor
+++ b/api/src/_Pages/_App.razor
@@ -1,4 +1,4 @@
-@using Kratos.Api.Components
+@using Kratos.Api._Pages._Layouts
 @using Microsoft.AspNetCore.Components.Routing
 
 @namespace Kratos.Api._Pages
