--- a/api/src/_Pages/Members.razor
+++ b/api/src/_Pages/Members.razor
@@ -1,315 +1,48 @@
+@using Features.Members.GetAll
+
 @namespace Kratos.Api._Pages
 @page "/members"
+@inject IRepository repo
 
+@code {
+  private List<Projections.Member> members = [];
+
+  protected override async Task OnInitializedAsync()
+  {
+    members = await repo.GetAllAsync(CancellationToken.None);
+  }
+}
+
+<style>
+  .members__inner {
+    grid-template-columns: 1fr 1fr !important;
+  }
+</style>
 <section class="main__members members">
   <div class="container">
-    <h1 class="members__title title">Members</h1>
+    <h2 class="members__title title">Members</h2>
     <div class="members__inner">
-      <div class="members__card card">
-        <div class="card__inner">
-          <p class="card__suptext">3d artist</p>
-          <div class="card__options card-options">
-            <div class="card-options__btn">
-              <span></span>
-              <span></span>
-              <span></span>
+      @foreach (var member in members)
+      {
+        <div class="members__card card">
+          <div class="card__inner">
+            <h3 class="card__title" style="font-size: 30px">
+              @member.FullName
+            </h3>
+            <div class="card__text">@member.Position</div>
+            <div class="card__subtext" style="font-size: 20px; text-align: justify;">@member.Bio</div>
+            <div class="card__box card-box">
+              <div class="card-box__person-img card-person-img">
+                <img
+                  class="card-person-img__image"
+                  src="/uploads/members/@member.DisplayPictureFileName"
+                  alt="img"
+                />
+              </div>
             </div>
-            <div class="card-options__inner">
-              <a class="card-options__link" href="#">
-                <svg
-                  width="16"
-                  height="16"
-                  viewBox="0 0 16 16"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M10.6667 14V12.6667C10.6667 11.9594 10.3857 11.2811 9.88563 10.781C9.38553 10.281 8.70725 10 8.00001 10H4.00001C3.29277 10 2.61449 10.281 2.11439 10.781C1.6143 11.2811 1.33334 11.9594 1.33334 12.6667V14"
-                    stroke="#0E1218"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                  <path
-                    d="M6.00001 7.33333C7.47277 7.33333 8.66668 6.13943 8.66668 4.66667C8.66668 3.19391 7.47277 2 6.00001 2C4.52725 2 3.33334 3.19391 3.33334 4.66667C3.33334 6.13943 4.52725 7.33333 6.00001 7.33333Z"
-                    stroke="#0E1218"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                  <path
-                    d="M12.6667 5.33331V9.33331"
-                    stroke="#0E1218"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                  <path
-                    d="M14.6667 7.33331H10.6667"
-                    stroke="#0E1218"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                </svg>
-                <span> Add Friend </span>
-              </a>
-              <a class="card-options__link" href="#">
-                <svg
-                  width="16"
-                  height="16"
-                  viewBox="0 0 16 16"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M12.6667 9.33333C13.66 8.36 14.6667 7.19333 14.6667 5.66667C14.6667 4.69421 14.2804 3.76158 13.5927 3.07394C12.9051 2.38631 11.9725 2 11 2C9.82668 2 9.00001 2.33333 8.00001 3.33333C7.00001 2.33333 6.17334 2 5.00001 2C4.02755 2 3.09492 2.38631 2.40729 3.07394C1.71965 3.76158 1.33334 4.69421 1.33334 5.66667C1.33334 7.2 2.33334 8.36667 3.33334 9.33333L8.00001 14L12.6667 9.33333Z"
-                    stroke="#0E1218"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                </svg>
-                <span> Follow </span>
-              </a>
-            </div>
-          </div>
-          <h3 class="card__title">
-            Anthony
-            <span> Clark </span>
-          </h3>
-          <a class="card__text" href="members-page.html"> @@anthony-clark </a>
-          <p class="card__subtext">Joined April 2019</p>
-          <div class="card__box card-box">
-            <div class="card-box__person-img card-person-img">
-              <img
-                class="card-person-img__image"
-                src="/images/member-icon-2.png"
-                alt="img"
-              />
-              <span class="card-person-img__status"> </span>
-            </div>
-            <a class="card-box__link" href="members-page.html">
-              Send Message
-            </a>
           </div>
         </div>
-      </div>
-      <div class="members__card card">
-        <div class="card__inner">
-          <p class="card__suptext">ux/ui designer</p>
-          <div class="card__options card-options">
-            <div class="card-options__btn">
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
-            <div class="card-options__inner">
-              <a class="card-options__link" href="members-page.html">
-                <svg
-                  width="16"
-                  height="16"
-                  viewBox="0 0 16 16"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M10.6667 14V12.6667C10.6667 11.9594 10.3857 11.2811 9.88563 10.781C9.38553 10.281 8.70725 10 8.00001 10H4.00001C3.29277 10 2.61449 10.281 2.11439 10.781C1.6143 11.2811 1.33334 11.9594 1.33334 12.6667V14"
-                    stroke="#0E1218"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                  <path
-                    d="M6.00001 7.33333C7.47277 7.33333 8.66668 6.13943 8.66668 4.66667C8.66668 3.19391 7.47277 2 6.00001 2C4.52725 2 3.33334 3.19391 3.33334 4.66667C3.33334 6.13943 4.52725 7.33333 6.00001 7.33333Z"
-                    stroke="#0E1218"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                  <path
-                    d="M12.6667 5.33331V9.33331"
-                    stroke="#0E1218"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                  <path
-                    d="M14.6667 7.33331H10.6667"
-                    stroke="#0E1218"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                </svg>
-                <span> Add Friend </span>
-              </a>
-              <a class="card-options__link" href="members-page.html">
-                <svg
-                  width="16"
-                  height="16"
-                  viewBox="0 0 16 16"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M12.6667 9.33333C13.66 8.36 14.6667 7.19333 14.6667 5.66667C14.6667 4.69421 14.2804 3.76158 13.5927 3.07394C12.9051 2.38631 11.9725 2 11 2C9.82668 2 9.00001 2.33333 8.00001 3.33333C7.00001 2.33333 6.17334 2 5.00001 2C4.02755 2 3.09492 2.38631 2.40729 3.07394C1.71965 3.76158 1.33334 4.69421 1.33334 5.66667C1.33334 7.2 2.33334 8.36667 3.33334 9.33333L8.00001 14L12.6667 9.33333Z"
-                    stroke="#0E1218"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                </svg>
-                <span> Follow </span>
-              </a>
-            </div>
-          </div>
-          <h3 class="card__title">
-            Valerie
-            <span> Ferguson </span>
-          </h3>
-          <a class="card__text" href="members-page.html"> @@valerie_ui </a>
-          <p class="card__subtext">Joined Oct 2020</p>
-          <div class="card__box card-box">
-            <div class="card-box__person-img card-person-img">
-              <img
-                class="card-person-img__image"
-                src="/images/member-icon-3.png"
-                alt="img"
-              />
-              <span
-                class="card-person-img__status card-person-img__status--disabled"
-              >
-              </span>
-            </div>
-            <a class="card-box__link" href="members-page.html">
-              Send Message
-            </a>
-          </div>
-        </div>
-      </div>
-      <div class="members__card card">
-        <div class="card__inner">
-          <p class="card__suptext">illustrator</p>
-          <div class="card__options card-options">
-            <div class="card-options__btn">
-              <span></span>
-              <span></span>
-              <span></span>
-            </div>
-            <div class="card-options__inner">
-              <a class="card-options__link" href="members-page.html">
-                <svg
-                  width="16"
-                  height="16"
-                  viewBox="0 0 16 16"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M10.6667 14V12.6667C10.6667 11.9594 10.3857 11.2811 9.88563 10.781C9.38553 10.281 8.70725 10 8.00001 10H4.00001C3.29277 10 2.61449 10.281 2.11439 10.781C1.6143 11.2811 1.33334 11.9594 1.33334 12.6667V14"
-                    stroke="#0E1218"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                  <path
-                    d="M6.00001 7.33333C7.47277 7.33333 8.66668 6.13943 8.66668 4.66667C8.66668 3.19391 7.47277 2 6.00001 2C4.52725 2 3.33334 3.19391 3.33334 4.66667C3.33334 6.13943 4.52725 7.33333 6.00001 7.33333Z"
-                    stroke="#0E1218"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                  <path
-                    d="M12.6667 5.33331V9.33331"
-                    stroke="#0E1218"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                  <path
-                    d="M14.6667 7.33331H10.6667"
-                    stroke="#0E1218"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                </svg>
-                <span> Add Friend </span>
-              </a>
-              <a class="card-options__link" href="members-page.html">
-                <svg
-                  width="16"
-                  height="16"
-                  viewBox="0 0 16 16"
-                  fill="none"
-                  xmlns="http://www.w3.org/2000/svg"
-                >
-                  <path
-                    d="M12.6667 9.33333C13.66 8.36 14.6667 7.19333 14.6667 5.66667C14.6667 4.69421 14.2804 3.76158 13.5927 3.07394C12.9051 2.38631 11.9725 2 11 2C9.82668 2 9.00001 2.33333 8.00001 3.33333C7.00001 2.33333 6.17334 2 5.00001 2C4.02755 2 3.09492 2.38631 2.40729 3.07394C1.71965 3.76158 1.33334 4.69421 1.33334 5.66667C1.33334 7.2 2.33334 8.36667 3.33334 9.33333L8.00001 14L12.6667 9.33333Z"
-                    stroke="#0E1218"
-                    stroke-width="1.5"
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                  />
-                </svg>
-                <span> Follow </span>
-              </a>
-            </div>
-          </div>
-          <h3 class="card__title">
-            Lilly-Rose
-            <span> Holland </span>
-          </h3>
-          <a class="card__text" href="members-page.html"> @@lillyrose.flower </a>
-          <p class="card__subtext">Joined Jan 2015</p>
-          <div class="card__box card-box">
-            <div class="card-box__person-img card-person-img">
-              <img
-                class="card-person-img__image"
-                src="/images/member-icon-7.png"
-                alt="img"
-              />
-              <span class="card-person-img__status"> </span>
-            </div>
-            <a class="card-box__link" href="members-page.html">
-              Send Message
-            </a>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="members__paging paging">
-      <p class="paging__text">Viewing 1 - 9 of 30 active members</p>
-      <ul class="paging__list">
-        <li class="paging__list-item">
-          <p class="paging__list-text">1</p>
-        </li>
-        <li class="paging__list-item">
-          <a class="paging__list-link" href="#"> 2 </a>
-        </li>
-        <li class="paging__list-item">
-          <a class="paging__list-link" href="#"> 3 </a>
-        </li>
-        <li class="paging__list-item">
-          <a class="paging__list-link" href="#">
-            <svg
-              width="16"
-              height="16"
-              viewBox="0 0 16 16"
-              fill="none"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M8.66663 4L12.1952 7.5286C12.4556 7.78894 12.4556 8.21106 12.1952 8.4714L8.66663 12M4.66663 4L8.19522 7.5286C8.45557 7.78894 8.45557 8.21106 8.19522 8.4714L4.66663 12"
-                stroke="white"
-                stroke-width="1.5"
-                stroke-linecap="round"
-              />
-            </svg>
-          </a>
-        </li>
-      </ul>
+      }
     </div>
   </div>
 </section>
