just "small" changes

--- a/api/src/_Pages/Home.razor
+++ b/api/src/_Pages/Home.razor
@@ -512,203 +512,27 @@
 
     <div class="portfolio_main">
       <div class="works_list works_list_col3">
-        <div class="work__shout">
-          <a
-            class="work__link-img"
-            href="members-portfolio-single.html"
-          >
-            <img src="/images/new/ga1.jpg" alt="img" />
-            <div class="work__link-image-caption">
-              Wallet App design
+        @for (int i = 0; i < 3; i++) 
+        {
+          <div class="work__shout">
+            <a
+              class="work__link-img"
+              href="members-portfolio-single.html"
+            >
+              <img src="/images/new/ga1.jpg" alt="img" />
+            </a>
+            <div class="work__link-image-user">
+              <div class="work__link-image-avatar">
+                <img
+                  class="members-section-top__img-image"
+                  src="/images/member-icon-16.png"
+                  alt="img"
+                />
+              </div>
+              <a class="name" href="members-portfolio-single.html"> Elodie Hardin</a>
             </div>
-          </a>
-          <div class="work__link-image-user">
-            <div class="work__link-image-avatar">
-              <img
-                class="members-section-top__img-image"
-                src="/images/member-icon-16.png"
-                alt="img"
-              />
-            </div>
-            <a href="members-portfolio-single.html"> Elodie Hardin</a>
           </div>
-        </div>
-
-        <div class="work__shout">
-          <a
-            class="work__link-img"
-            href="members-portfolio-single.html"
-          >
-            <img src="/images/new/ga2.jpg" alt="img" />
-            <div class="work__link-image-caption">
-              Wallet App design
-            </div>
-          </a>
-          <div class="work__link-image-user">
-            <div class="work__link-image-avatar">
-              <img
-                class="members-section-top__img-image"
-                src="/images/member-icon-16.png"
-                alt="img"
-              />
-            </div>
-            <a href="members-portfolio-single.html"> Elodie Hardin</a>
-          </div>
-        </div>
-
-        <div class="work__shout">
-          <a
-            class="work__link-img"
-            href="members-portfolio-single.html"
-          >
-            <img src="/images/new/ga3.jpg" alt="img" />
-            <div class="work__link-image-caption">
-              Wallet App design
-            </div>
-          </a>
-          <div class="work__link-image-user">
-            <div class="work__link-image-avatar">
-              <img
-                class="members-section-top__img-image"
-                src="/images/member-icon-16.png"
-                alt="img"
-              />
-            </div>
-            <a href="members-portfolio-single.html"> Elodie Hardin</a>
-          </div>
-        </div>
-
-        <div class="work__shout">
-          <a
-            class="work__link-img"
-            href="members-portfolio-single.html"
-          >
-            <img src="/images/new/ga4.jpg" alt="img" />
-            <div class="work__link-image-caption">
-              Wallet App design
-            </div>
-          </a>
-          <div class="work__link-image-user">
-            <div class="work__link-image-avatar">
-              <img
-                class="members-section-top__img-image"
-                src="/images/member-icon-16.png"
-                alt="img"
-              />
-            </div>
-            <a href="members-portfolio-single.html"> Elodie Hardin</a>
-          </div>
-        </div>
-
-        <div class="work__shout">
-          <a
-            class="work__link-img"
-            href="members-portfolio-single.html"
-          >
-            <img src="/images/new/ga1.jpg" alt="img" />
-            <div class="work__link-image-caption">
-              Wallet App design
-            </div>
-          </a>
-          <div class="work__link-image-user">
-            <div class="work__link-image-avatar">
-              <img
-                class="members-section-top__img-image"
-                src="/images/member-icon-16.png"
-                alt="img"
-              />
-            </div>
-            <a href="members-portfolio-single.html"> Elodie Hardin</a>
-          </div>
-        </div>
-
-        <div class="work__shout">
-          <a
-            class="work__link-img"
-            href="members-portfolio-single.html"
-          >
-            <img src="/images/new/ga2.jpg" alt="img" />
-            <div class="work__link-image-caption">
-              Wallet App design
-            </div>
-          </a>
-          <div class="work__link-image-user">
-            <div class="work__link-image-avatar">
-              <img
-                class="members-section-top__img-image"
-                src="/images/member-icon-16.png"
-                alt="img"
-              />
-            </div>
-            <a href="members-portfolio-single.html"> Elodie Hardin</a>
-          </div>
-        </div>
-
-        <div class="work__shout">
-          <a
-            class="work__link-img"
-            href="members-portfolio-single.html"
-          >
-            <img src="/images/new/ga3.jpg" alt="img" />
-            <div class="work__link-image-caption">
-              Wallet App design
-            </div>
-          </a>
-          <div class="work__link-image-user">
-            <div class="work__link-image-avatar">
-              <img
-                class="members-section-top__img-image"
-                src="/images/member-icon-16.png"
-                alt="img"
-              />
-            </div>
-            <a href="members-portfolio-single.html"> Elodie Hardin</a>
-          </div>
-        </div>
-
-        <div class="work__shout">
-          <a
-            class="work__link-img"
-            href="members-portfolio-single.html"
-          >
-            <img src="/images/new/ga4.jpg" alt="img" />
-            <div class="work__link-image-caption">
-              Wallet App design
-            </div>
-          </a>
-          <div class="work__link-image-user">
-            <div class="work__link-image-avatar">
-              <img
-                class="members-section-top__img-image"
-                src="/images/member-icon-16.png"
-                alt="img"
-              />
-            </div>
-            <a href="members-portfolio-single.html"> Elodie Hardin</a>
-          </div>
-        </div>
-
-        <div class="work__shout">
-          <a
-            class="work__link-img"
-            href="members-portfolio-single.html"
-          >
-            <img src="/images/new/ga2.jpg" alt="img" />
-            <div class="work__link-image-caption">
-              Wallet App design
-            </div>
-          </a>
-          <div class="work__link-image-user">
-            <div class="work__link-image-avatar">
-              <img
-                class="members-section-top__img-image"
-                src="/images/member-icon-16.png"
-                alt="img"
-              />
-            </div>
-            <a href="members-portfolio-single.html"> Elodie Hardin</a>
-          </div>
-        </div>
+        }
       </div>
     </div>
   </div>
